<resources>
    <string name="app_name">Meters to Inches</string>
    <string name="valueEnter">Enter a value in Meters</string>
    <string name="convert">Convert</string>
    <string name="inches">Inches</string>
    <string name="feet">feet</string>
    <string name="error_message">Please enter a valid number</string>
    <string name="centimeters">Centimeters</string>
    <string name="millimeters">MilliMeters</string>
</resources>
